tests/baselines/reference/assignmentToObject.errors.txt
tests/cases/compiler/assignmentToObject.ts(3,5): error TS2323: Type '{ toString: number; }' is not assignable to type 'Object'.
  Types of property 'toString' are incompatible.
    Type 'number' is not assignable to type '() => string'.


==== tests/cases/compiler/assignmentToObject.ts (1 errors) ====
    var a = { toString: 5 };
    var b: {} = a;  // ok
    var c: Object = a;  // should be error
        ~
!!! error TS2323: Type '{ toString: number; }' is not assignable to type 'Object'.
!!! error TS2323:   Types of property 'toString' are incompatible.
!!! error TS2323:     Type 'number' is not assignable to type '() => string'.
    